--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     --main--color:#242331;
     --main--background:#f7f7f7;
     --orange--color:#FE7C44;
-    --blue--color:#013645;
+    --blue-color:#013645;
     --radius:0.625rem;
     --background:oklch(1 0 0);
     --foreground:oklch(0.145 0 0);
@@ -41,8 +41,7 @@
     --sidebar-accent-foreground:oklch(0.205 0 0);
     --sidebar-border:oklch(0.922 0 0);
     --sidebar-ring:oklch(0.708 0 0);
-
-   }
+       }
 
 .dark {
     --background:oklch(0.145 0 0);
